After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779659 - egg-task-cache: Don't leak the GTask used to fetch the value
egg-task-cache: Don't leak the GTask used to fetch the value
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-06 16:58 UTC by Debarshi Ray
Modified: 2017-03-06 22:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
egg-task-cache: Don't leak the GTask used to fetch the value (717 bytes, patch)
2017-03-06 16:59 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-03-06 16:58:34 UTC
The populate_callback gets a new reference to the GTask used to fetch the value, but we never drop it.
Comment 1 Debarshi Ray 2017-03-06 16:59:29 UTC
Created attachment 347325 [details] [review]
egg-task-cache: Don't leak the GTask used to fetch the value
Comment 2 Christian Hergert 2017-03-06 21:56:48 UTC
Review of attachment 347325 [details] [review]:

LGTM
Comment 3 Christian Hergert 2017-03-06 22:02:23 UTC
Attachment 347325 [details] pushed as d87cd35 - egg-task-cache: Don't leak the GTask used to fetch the value