egg-task-cache: Don't leak the GTask used to fetch the value

https://bugzilla.gnome.org/show_bug.cgi?id=779659